fixed blurry buttons on chromium

--- a/source/components/stock/stock.module.scss
+++ b/source/components/stock/stock.module.scss
@@ -58,7 +58,6 @@
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s 0.3s;
-  will-change: transform;
 }
 
 .firstRow {
